--- a/index.html
+++ b/index.html
@@ -1,8 +1,84 @@
 <!DOCTYPE html>
+<html lang="pt-br">
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Hubballi' rel='stylesheet'>
     <title>Welcome ScorpionDevs</title>  
 </head>
-<body>   
+<script type="text/javascript" src="assets/js/include.js"></script>
+<body class="fundo"> 
+    <nav class="nav">
+        <div class="container">   
+            <div class="inicio">
+                <div class="logo">
+                    <a href="index.html"><img src="assets/img/logo.png" width='200px' height='130px'/></a>
+                </div>
+                <div class="download">
+                    <a href="assets/js/download.js">
+                        DOWNLOAD
+                    </a>
+                </div>
+                <div class="about">
+                    <a href="about.html"> ABOUT</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="container2">
+        <div class="welcome"> 
+            <h1>
+                Scorpion Devs website!
+            </h1>
+            <h2>Thanks for visit this website, We like to share all our projects!</h2>
+            <p>
+                <br>Here we have any ROMs maintained by me (TioBurla)!
+                <br>All ROMs is uploaded in SourceForge.
+            </p>
+       </div>
+       <div class="roms">
+            <h1>ROMS</h1>
+            <div class="load">
+                <div class="load2">
+                    
+                </div>
+            </div>
+       </div>
+    </div>
+    <div class="container3">
+        <div class="devices">
+            <div class="device1">
+                <a href="https://seulink.online/sftioburla">
+                    <img src="assets/img/santoni.png" alt="Redmi 4X">
+                    <p>Redmi 4X <br>(SANTONI)</p>
+                </a>
+            </div>
+            <div class="device2">
+                <a href="https://seulink.online/sftioburla">
+                    <img src="assets/img/x01bd.png" alt="Asus Zenfone Max Pro M2">
+                    <p>Asus Zenfone Max Pro M2 <br>(X01BD)</p>
+                </a>
+            </div>
+            <div class="device3">
+                <a href="https://seulink.online/sftioburla">
+                    <img src="assets/img/vayu.png" alt="Poco X3 Pro">
+                    <p>Poco X3 Pro <br>(VAYU)
+                    </p>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="container4">
+        <div class="donate">
+            <div class="paypal">
+                <h1>Give donate for help my projects!</h1>
+                <br>
+                <a href=""></a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
